# envyd

./: CMakeLists.txt  LICENSE  README.md
src/: helpers.c  helpers.h  main.c  network.c  network.h
src/network/: network.c  network.h
src/nvml/: actions.h
